--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>CellBite</title>
         <script src="https://kit.fontawesome.com/d604d542b3.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="assets/stylesheets/index.css"/>
+        <link rel="stylesheet" href="https://raw.githack.com/mikohow/CellBite/main/assets/stylesheets/index.css"/>
     </head>
     <body>
         <div id="overlay-container" class="container full center">
@@ -139,9 +139,8 @@
             </div>
         </div>
         <div id="main-canvas-container" class="container full center"></div>
-        <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-        <script src="assets/scripts/readerwriter.js"></script>
-        <script src="assets/scripts/p5.min.js"></script>
-        <script src="assets/scripts/client.js"></script>
+        <script src="https://raw.githack.com/mikohow/CellBite/main/assets/scripts/readerwriter.js"></script>
+        <script src="https://raw.githack.com/mikohow/CellBite/main/assets/scripts/p5.min.js"></script>
+        <script src="https://raw.githack.com/mikohow/CellBite/main/assets/scripts/client.js"></script>
     </body>
 </html>
