follow up commit

--- a/index.html
+++ b/index.html
@@ -4,141 +4,11 @@
         <meta charset="utf-8">
         <title>CellBite</title>
         <script src="https://kit.fontawesome.com/d604d542b3.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://raw.githack.com/mikohow/CellBite/main/assets/stylesheets/index.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+        <style>*::-webkit-scrollbar{display: none}::placeholder{color: inherit}</style>
     </head>
     <body>
-        <div id="overlay-container" class="container full center">
-            <div class="sub-container pane-sub-container center">
-                <div class="pane-column">
-                    <div id="minion-pane-section" class="pane-section">
-                        <div class="pane-section-title">Minions</div>
-                        <div class="pane-section-row">
-                            <div id="minion-skin-preview" class="skin-preview relative" toggle-for="minion">
-                                <div class="skin-preview-alt absolute">
-                                    <i class="fa-solid fa-plus"></i>
-                                </div>
-                                ?
-                            </div>
-                            <input id="minion-nick" class="input" type="text" maxlength="15" placeholder="Minion Nick" spellcheck="false"/>
-                        </div>
-                        <ul id="minion-amount-ul">
-                            <li class="minion-amount-li minion-amount-li-selected">50</li>
-                            <li class="minion-amount-li">100</li>
-                            <li class="minion-amount-li">150</li>
-                            <li class="minion-amount-li">200</li>
-                            <li class="minion-amount-li">250</li>
-                        </ul>
-                        <div id="toggle-minions" class="btn btn-green">Start</div>
-                        <div id="how-to-control" class="how-to">
-                            <span>Press <strong>P</strong> to toggle follow mouse / pause</span>
-                            <br/>
-                            <span>Press <strong>E</strong> to split minions</span>
-                            <br/>
-                            <span>Press <strong>R</strong> to eject minions</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="pane-column">
-                    <div id="play-section" class="pane-section relative">
-                        <div id="play-section-title">
-                            <strong>CellBite</strong>
-                            <div id="play-section-sub-title">Connecting...</div>
-                        </div>
-                        <div class="pane-section-row">
-                            <div id="player-skin-preview" class="skin-preview relative" toggle-for="player">
-                                <div class="skin-preview-alt absolute">
-                                    <i class="fa-solid fa-plus"></i>
-                                </div>
-                                ?
-                            </div>
-                            <input id="nick" class="input" type="text" maxlength="15" placeholder="Nickname" spellcheck="false"/>
-                        </div>
-                        <div id="play" class="btn btn-green">Play</div>
-                        <div id="how-to-play" class="how-to">
-                            <span>Move your mouse to control your cell</span>
-                            <br/>
-                            <span>Press <strong>Space</strong> to split</span>
-                            <br/>
-                            <span>Press <strong>W</strong> to eject some mass</span>
-                        </div>
-                    </div>
-                    <div id="settings-section" class="pane-section">
-                        <div class="pane-section-title">Settings</div>
-                        <div class="pane-section-row">
-                            <select id="graphics" class="input">
-                                <option value="retina">Graphics: Retina</option>
-                                <option value="high">Graphics: High</option>
-                                <option value="medium">Graphics: Medium</option>
-                                <option value="low">Graphics: Low</option>
-                                <option value="very_low">Graphics: Very Low</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="pane-column">
-                    <div id="server-section" class="pane-section">
-                        <div class="pane-section-title">Servers</div>
-                        <div id="server-grid">
-                            <div class="server-box server-box-selected relative" ip-address="wss://eatcells.com/api/">
-                                <div class="server-type absolute">
-                                    <i class="fa-solid fa-lock-open"></i>
-                                </div>
-                                <span class="absolute"><strong>EatCells</strong></span>
-                            </div>
-                            <div class="server-box relative" ip-address="wss://ogar.eatcells.com/api/">
-                                <div class="server-type absolute">
-                                    <i class="fa-solid fa-lock-open"></i>
-                                </div>
-                                <span class="absolute"><strong>Ogar</strong></span>
-                            </div>
-                            <div class="server-box relative" ip-address="ws://ogar.mivabe.nl:44411">
-                                <div class="server-type absolute">
-                                    <i class="fa-solid fa-lock-open"></i>
-                                </div>
-                                <span class="absolute"><strong>Mivabe</strong></span>
-                            </div>
-                            <div class="server-box relative" ip-address="ws://ogar2xd.glitch.me:80">
-                                <div class="server-type absolute">
-                                    <i class="fa-solid fa-lock-open"></i>
-                                </div>
-                                <span class="absolute"><strong>Ogar2XD</strong></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="sub-container skin-sub-container">
-                <input id="skin-search" class="input" type="text" maxlength="50" placeholder="Search Skins" spellcheck="false"/>
-                <div id="skin-search-list">
-                    <div class="skin-search-item" skin-tag="::random">?</div>
-                </div>
-            </div>
-        </div>
-        <div id="game-overlay-container" class="container full center">
-            <div class="sub-container leaderboard-sub-container">
-                <div id="leaderboard-title"><strong>Leaderboard</strong></div>
-                <ul id="leaderboard-ul"></ul>
-            </div>
-            <div id="chat-sub-container" class="sub-container chat-sub-container">
-                <div id="chat-box"></div>
-                <div id="chat-emoji">
-                    <ul id="chat-emoji-ul">
-                        <li class="chat-emoji-li">👀</li>
-                        <li class="chat-emoji-li">🤣</li>
-                        <li class="chat-emoji-li">😎</li>
-                        <li class="chat-emoji-li">🤩</li>
-                        <li class="chat-emoji-li">👽</li>
-                        <li class="chat-emoji-li">🤬</li>
-                        <li class="chat-emoji-li">💀</li>
-                        <li class="chat-emoji-li">💩</li>
-                    </ul>
-                </div>
-                <div id="chat-input">
-                    <input id="message-input" class="input" type="text" maxlength="200" placeholder="Enter to chat" spellcheck="false"/>
-                </div>
-            </div>
-        </div>
-        <div id="main-canvas-container" class="container full center"></div>
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
         <script src="https://raw.githack.com/mikohow/CellBite/main/assets/scripts/readerwriter.js"></script>
         <script src="https://raw.githack.com/mikohow/CellBite/main/assets/scripts/p5.min.js"></script>
         <script src="https://raw.githack.com/mikohow/CellBite/main/assets/scripts/client.js"></script>
